<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright [2013] [Ricardo García Fernández] [ricarodgarfe@gmail.com]
 
 This file is free software: you can redistribute it and/or modify it under
 the terms of the GNU General Public License as published by the Free Software
 Foundation, either version 3 of the License, or (at your option) any later
 version.
 
 This file is distributed in the hope that it will be useful, but WITHOUT ANY
 WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR
 A PARTICULAR PURPOSE. See the GNU General Public License for more details.
 
 You should have received a copy of the GNU General Public License along with
 this program. If not, see <http://www.gnu.org/licenses/>. 
 -->

<resources>

    <string name="app_name">Cercanías Renfe</string>
    <string name="stationSalida">Salida</string>
    <string name="stationLlegada">Llegada</string>
    <string name="tiempo">Duración</string>
    <string name="lineaSalida">Línea</string>

    <!-- Nucleos view -->
    <string name="textNucleos">Nucleos</string>

    <!-- Estacion Nucleos Layout -->
    <string name="seleccionEstaciones">Estaciones</string>

    <string name="estacionOrigenText">Estación de origen</string>
    <string name="estacionDestinoText">Estación de destino</string>
    <string name="verHorariosButton">Ver horarios</string>

    <!-- Hoarios Cercanias Layout -->
    <string name="mostrarHorarios">Horarios</string>
    <string name="infoNucleo">Nucleo</string>
    <string name="infoStations">Estación origen - Estación destino</string>
    <string name="buttonVuelta">Viaje de vuelta</string>

</resources>