<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffffff"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textViewInfoStations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3px"
        android:text="@string/infoStations"
        android:textColor="#ff000000"
        android:textSize="15sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffffffff"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textViewInfoDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5px"
            android:gravity="left"
            android:paddingLeft="3px"
            android:paddingTop="6px"
            android:textColor="#ff000000"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonVuelta"
            android:layout_width="wrap_content"
            android:layout_height="60px"
            android:layout_gravity="right"
            android:layout_marginLeft="10px"
            android:gravity="right"
            android:text="@string/buttonVuelta" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewInfoTransbordo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3px"
        android:textColor="#ff000000"
        android:textSize="15sp"
        android:visibility="invisible" />

    <ScrollView
        android:id="@+id/scrollViewTableHorarios"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5px"
        android:background="#ffffffff"
        android:orientation="vertical" >

        <TableLayout
            android:id="@+id/tableLayoutHorarios"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <TableRow android:background="#ffd9e2f3" >

                <TextView
                    android:gravity="center_horizontal"
                    android:padding="3px"
                    android:text="@string/stationSalida"
                    android:textColor="#ff000000"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:gravity="center_horizontal"
                    android:padding="3px"
                    android:text="@string/stationLlegada"
                    android:textColor="#ff000000"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:gravity="center_horizontal"
                    android:padding="3px"
                    android:text="@string/tiempo"
                    android:textColor="#ff000000"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:gravity="center_horizontal"
                    android:padding="3px"
                    android:text="@string/lineaSalida"
                    android:textColor="#ff000000"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </TableRow>
        </TableLayout>
    </ScrollView>

</LinearLayout>